# rust-rest-api

./: .env.example  Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2024-11-19-121351_add_todo_timestamps/: up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs
src/handlers/: mod.rs  todos_handlers.rs
src/routes/: mod.rs  todos_routes.rs
