[package]
name = "rust_rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
